--- a/index.html
+++ b/index.html
@@ -24,23 +24,36 @@
       <div class="d-flex gap-2">
         <div>
           <label class="form-label">First name</label>
-          <input class="form-control" id="first-name-input" />
+          <input class="form-control" id="first-name-input" placeholder="ธนิก" />
           <div class="invalid-feedback">Invalid first name</div>
         </div>
         <div>
           <label class="form-label">Last name</label>
-          <input class="form-control" id="last-name-input" />
+          <input
+            class="form-control"
+            id="last-name-input"
+            placeholder="ศิริธร"
+          />
           <div class="invalid-feedback">Invalid last name</div>
         </div>
       </div>
       <div>
         <label class="form-label">Email</label>
-        <input class="form-control" id="email-input" />
+        <input
+          class="form-control"
+          id="email-input"
+          placeholder="670610704"
+        />
         <div class="invalid-feedback">Invalid email format</div>
       </div>
       <div>
         <label class="form-label">Password</label>
-        <input class="form-control" type="password" id="password-input" />
+        <input
+          class="form-control"
+          type="password"
+          id="password-input"
+          
+        />
         <div class="invalid-feedback">Require at least 6 characters</div>
       </div>
       <div>
@@ -49,6 +62,7 @@
           class="form-control"
           type="password"
           id="password-confirm-input"
+          
         />
         <div class="invalid-feedback">
           Password mismatch or invalid password
@@ -57,6 +71,9 @@
 
       <div class="d-flex justify-content-end gap-2">
         <button id="submit-btn" class="btn btn-success my-2">Register</button>
+        <button id="reset-btn" class="btn btn-danger my-2" type="button">
+          Reset
+        </button>
       </div>
     </div>
   </body>
